--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,134 @@
-gradio>=4.0.0
-pandas>=2.0.0
-plotly>=5.0.0
-numpy>=1.24.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+audioop-lts==0.2.1
+black==25.1.0
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==6.1.0
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.2
+contourpy==1.3.3
+coverage==7.10.2
+cycler==0.12.1
+dash==3.2.0
+datasets==4.0.0
+dill==0.3.8
+fastapi==0.116.1
+ffmpy==0.6.1
+filelock==3.18.0
+flake8==7.3.0
+Flask==3.1.1
+fonttools==4.59.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+gitdb==4.0.12
+GitPython==3.1.45
+gradio==5.39.0
+gradio_client==1.11.0
+groovy==0.1.2
+h11==0.16.0
+hf-xet==1.1.5
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.34.3
+idna==3.10
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+lightgbm==4.6.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mccabe==0.7.0
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.6.3
+multiprocess==0.70.16
+mypy==1.17.1
+mypy_extensions==1.1.0
+narwhals==2.0.1
+nest-asyncio==1.6.0
+networkx==3.5
+numpy==2.3.2
+orjson==3.11.1
+packaging==25.0
+pandas==2.3.1
+pathspec==0.12.1
+patsy==1.0.1
+pillow==11.3.0
+platformdirs==4.3.8
+plotly==6.2.0
+pluggy==1.6.0
+propcache==0.3.2
+protobuf==6.31.1
+pyarrow==21.0.0
+pycodestyle==2.14.0
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+pydub==0.25.1
+pyflakes==3.4.0
+Pygments==2.19.2
+pyparsing==3.2.3
+pytest==8.4.1
+pytest-cov==6.2.1
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2025.7.34
+requests==2.32.4
+retrying==1.4.2
+rich==14.1.0
+rpds-py==0.26.0
+ruff==0.12.7
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.7.1
+scipy==1.16.1
+seaborn==0.13.2
+semantic-version==2.10.0
+setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.47.2
+statsmodels==0.14.5
+streamlit==1.47.1
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+-e git+https://github.com/thegeekybeng/TIPM.git@9e8dee5fa34aa6966d7261f8b1a8f1184c7d7aea#egg=tipm
+tokenizers==0.21.4
+toml==0.10.2
+tomlkit==0.13.3
+torch==2.7.1
+tornado==6.5.1
+tqdm==4.67.1
+transformers==4.54.1
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+websockets==15.0.1
+Werkzeug==3.1.3
+xgboost==3.0.3
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
