🚀 Deploy Enhanced TIPM v2.0 with Export Sector Intelligence
✨ Major Features Added:
- Export sector intelligence showing key industries each country exports to USA
- Enhanced country coverage: 45 countries with verified Trump-era tariff data
- Three-tab analysis system: Country Impact, Sector Analysis, Risk Assessment
- Authoritative data sources integration (World Bank, IMF, OECD methodologies)
- Professional-grade economic modeling with legitimate calculations

🎯 Technical Improvements:
- Gradio 4.44.1 optimized for HF Spaces
- Lightweight dependencies for faster deployment
- Strategic trade intelligence for policy analysis
- Enhanced visualizations and export capabilities

📊 Data Quality:
- Real historical tariff rates from Trump administration
- Verified export sector mappings for all countries
- Professional economic impact classifications
- CSV export functionality for further analysis

Ready for Hugging Face Spaces deployment! 🌟

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Optimized requirements for Hugging Face Spaces
-# Core dependencies for TIPM Gradio app
+# Lightweight versions for deployment
 
 # Web framework
-gradio==4.44.0
+gradio==4.44.1
 
 # Data processing
 pandas==2.2.3
 numpy==1.26.4
 
-# Visualization
+# Visualization (essential only)
 plotly==5.24.1
 
 # ML/AI libraries (lightweight versions)
@@ -17,10 +17,8 @@ transformers==4.44.2
 
 # Text processing
 nltk==3.9.1
-spacy==3.7.6
 
-# Async and HTTP
-aiohttp==3.12.15
+# HTTP requests
 requests==2.32.3
 
 # Utilities
