--- a/huggingface-spaces/requirements.txt
+++ b/huggingface-spaces/requirements.txt
@@ -1,31 +1,28 @@
-# TIPM v1.5 - HuggingFace Spaces Requirements
-# Optimized for HuggingFace Spaces deployment
-
-# Core Dependencies
+# TIPM Hugging Face Spaces Requirements
+# Core ML and Data Science
 numpy>=1.21.0
 pandas>=1.3.0
-scikit-learn>=0.24.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+
+# Deep Learning and Transformers
 torch>=1.9.0
+transformers>=4.20.0
+sentence-transformers>=2.2.0
 
 # Web Interface
-gradio>=5.41.0
-plotly>=6.0.0
-
-# NLP & ML
-transformers>=4.10.0
-tokenizers>=0.21.0
-safetensors>=0.4.3
+gradio>=3.50.0
+plotly>=5.0.0
 
 # Data Processing
-requests>=2.31.0
-pycountry>=22.3.1
-python-dateutil>=2.8.2
+networkx>=2.6.0
+aiohttp>=3.8.0
+chromadb>=0.4.0
 
 # Utilities
-tqdm>=4.27
-click>=8.0.0
-pyyaml>=5.1
-filelock>=3.0.0
+pydantic>=2.0.0
+python-dotenv>=0.19.0
+requests>=2.25.0
 
-# Type Checking (minimal for deployment)
-typing-extensions>=3.7.4.3
+# Optional but recommended for performance
+accelerate>=0.20.0
