--- a/huggingface-spaces/requirements.txt
+++ b/huggingface-spaces/requirements.txt
@@ -1,4 +1,4 @@
-# TIPM Hugging Face Spaces Requirements
+# TIPM Hugging Face Spaces Requirements v2.0
 # Core ML and Data Science
 numpy>=1.21.0
 pandas>=1.3.0
@@ -22,7 +22,15 @@ chromadb>=0.4.0
 # Utilities
 pydantic>=2.0.0
 python-dotenv>=0.19.0
-requests>=2.25.0
+requests>=2.31.0
+
+# Real Data Integration (NEW)
+# Core HTTP requests for API calls
+requests>=2.31.0
+
+# Data manipulation and analysis
+pandas>=2.0.0
+numpy>=1.24.0
 
 # Optional but recommended for performance
 accelerate>=0.20.0
