--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 # render.yaml
+
 services:
+  # Backend FastAPI service
   - type: web
     name: tipm-api
     env: python
     plan: free
-    region: singapore  # or oregon/frankfurt depending on your user base
+    region: singapore
     buildCommand: pip install -r requirements.txt
     startCommand: python -m uvicorn main:app --host=0.0.0.0 --port=10000
     runtime: python
@@ -12,3 +14,19 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.9
     rootDir: api
+
+  # Frontend Next.js SSR service
+  - type: web
+    name: tipm-demo
+    env: node
+    plan: free
+    region: singapore
+    buildCommand: npm install && npm run build
+    startCommand: npm run start
+    runtime: node
+    rootDir: src
+    envVars:
+      - key: NODE_VERSION
+        value: 18.18.2
+      - key: NEXT_PUBLIC_API_BASE
+        value: https://tipm-api.onrender.com
