Updated render.yaml and moved frontend to src directory

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,6 @@ services:
   # Backend FastAPI service
   - type: web
     name: tipm-api
-    env: python
     plan: free
     region: singapore
     buildCommand: pip install -r requirements.txt
@@ -15,16 +14,15 @@ services:
         value: 3.11.9
     rootDir: api
 
-  # Frontend Next.js SSR service
   - type: web
-    name: tipm-demo
+    name: tipm-app
     env: node
     plan: free
     region: singapore
     buildCommand: npm install && npm run build
     startCommand: npm run start
     runtime: node
-    rootDir: src
+    rootDir: src     # ⬅️ updated from frontend → src
     envVars:
       - key: NODE_VERSION
         value: 18.18.2
