--- a/render.yaml
+++ b/render.yaml
@@ -19,7 +19,7 @@ services:
     env: node
     plan: free
     region: singapore
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm run build && cp -r ../.next .
     startCommand: npm run start
     runtime: node
     rootDir: src     # ⬅️ updated from frontend → src
