Fix 502 Bad Gateway: Add PORT env var and proper start command for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -20,7 +20,7 @@ services:
     plan: free
     region: singapore
     buildCommand: npm install && npm run build
-    startCommand: npm run start
+    startCommand: npm run start -p $PORT
     runtime: node
     rootDir: src     # ⬅️ updated from frontend → src
     envVars:
@@ -28,3 +28,5 @@ services:
         value: 18.18.2
       - key: NEXT_PUBLIC_API_BASE
         value: https://tipm-api.onrender.com
+      - key: PORT
+        value: 10001
