Add environment variable configuration with correct API URL

--- a/env.example
+++ b/env.example
@@ -1,5 +1,11 @@
-# Railway Production Environment Variables
-NEXT_PUBLIC_API_URL=https://your-railway-app.railway.app
-CUSTOM_KEY=production_key
+# TIPM Environment Variables
+# Copy this to .env.local for local development
 
-# Railway will automatically set PORT for the backend
+# Backend API URL - Update with your deployment URL
+NEXT_PUBLIC_API_BASE=https://tipm-app.onrender.com
+
+# Optional: Custom configuration key
+CUSTOM_KEY=development_key
+
+# Note: Environment variables starting with NEXT_PUBLIC_ are exposed to the browser
+# For production deployments, set these in your hosting platform (Vercel/Railway/etc.)
