Add .env file for Vercel deployment with correct API URL

--- a/.gitignore
+++ b/.gitignore
@@ -71,8 +71,7 @@ out/
 build/
 dist/
 
-# Environment variables
-.env
+# Environment variables (keep .env for Vercel deployment)
 .env.local
 .env.development.local
 .env.test.local
