🚀 Production ready: CORS fixed, deployment configs added, production deployment guide

--- a/env.example
+++ b/env.example
@@ -1,8 +1,14 @@
 # TIPM Environment Variables
 # Copy this to .env.local for local development
 
-# Backend API URL - Update with your deployment URL
-NEXT_PUBLIC_API_BASE=https://tipm-app.onrender.com
+# Backend API URL - Choose based on environment:
+# Local development: http://localhost:8000
+# Production (Render): https://tipm-api.onrender.com
+# Production (Railway): https://tipm-app.railway.app
+NEXT_PUBLIC_API_BASE=http://localhost:8000
+
+# Environment
+ENVIRONMENT=development
 
 # Optional: Custom configuration key
 CUSTOM_KEY=development_key
