--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-  "version": 2,
-  "name": "tipm-app",
-  "env": {
-    "NEXT_PUBLIC_API_BASE": "https://tipm-api.onrender.com",
-    "ENVIRONMENT": "production"
-  },
-  "functions": {
-    "src/app/api/**/*.ts": {
-      "maxDuration": 30
-    }
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "ignoreCommand": "echo 'No ignored files'"
 }
